--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <p>Welcome to Chat App</p>
+    <h1>Welcome to Chat App</h1>
+    <ul id="messages"></ul>
+    <form action="">
+      <input id="m" autocomplete="off" /><button>Send</button>
+    </form>
 </body>
 </html>
