--- a/public/index.html
+++ b/public/index.html
@@ -7,20 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/index.js"></script>
 </head>
 <body>
     <h1>Welcome to Chat App</h1>
 
     <script>
-        let socket = io();
-
-        socket.on('connect', () => {
-            console.log('Connected to server');
-        });
-
-        socket.on('disconnect', () => {
-            console.log('Disconnected from server')
-        });
+      
     </script>
 
     <ul id="messages"></ul>
