--- a/public/index.html
+++ b/public/index.html
@@ -6,22 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/styles.css" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
-<body>
+<body class="chat">
 
-    <h1>Welcome to the chat app</h1>
+    <div class="chat__sidebar">
+        <h3>People</h3>
+        <div id="users"></div>
+    </div>
 
-    <ol id="messages"></ol>
+    <div class="chat__main">
+        <ol id="messages" class="chat__messages"></ol>
   
-    <form id="message-form">
-      <input name="message" type="text" placeholder="Message"/>
-      <button>Send</button>
-    </form>
-    <button id="send-location">Send Location</button>
+        <div class="chat__footer">
+            <form id="message-form">
+                <input name="message" 
+                type="text" 
+                placeholder="Type a message..." 
+                autocomplete="off" 
+                autofocus
+                />
+                <button>Send</button>
+              </form>
+              <button id="send-location">Send Location</button>
+        </div>
+    </div>
+
+
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/index.js"></script>
